[package]
edition = "2018"
name = "qasmsim"
description = "A QASM interpreter and quantum simulator in Rust"
version = "0.1.0"
repository = "git@github.com:delapuente/qasmsim.git"
license = "MIT"
authors = ["Salvador de la Puente González <hola@salvadelapuente.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = "z"

[dependencies]
num = "0.2.1"
lalrpop-util = "0.18.1"
regex = "1.3"
cached = "0.12.0"
float-cmp = "0.6.0"
lazy_static = "1.4.0"
rand = "0.7.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
num = { version = "0.2.1", features = ["serde"] }
rand = { version = "0.7.3", features = ["wasm-bindgen", "getrandom"] }
wasm-bindgen = "0.2.59"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.36"
web-sys = { version = "0.3.36", features = ["console", "Performance", "Window"] }

[dev-dependencies]
indoc = "0.3.4"

[build-dependencies]
lalrpop = "0.18.1"
