[package]
edition = "2018"
name = "qasmsim"
description = "A QASM interpreter and quantum simulator in Rust"
version = "0.1.0"
repository = "git@github.com:delapuente/qasmsim.git"
license = "MIT"
authors = ["Salvador de la Puente González <hola@salvadelapuente.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "qasmsim"
required-features = ["default"]

[features]
default = ["cli"]
cli = ["structopt", "prettytable-rs", "csv"]

[profile.release]
lto = true
opt-level = "z"

[dependencies]
num = "0.2.1"
lalrpop-util = "0.18.1"
regex = "1.3"
cached = "0.12.0"
float-cmp = "0.6.0"
lazy_static = "1.4.0"
rand = "0.7.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
structopt = { version = "0.3", default-features = false, optional = true }
prettytable-rs = { version = "0.8.0", optional = true }
csv = { version = "1.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
num = { version = "0.2.1", features = ["serde"] }
rand = { version = "0.7.3", features = ["wasm-bindgen", "getrandom"] }
wasm-bindgen = "0.2.60"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.37"
web-sys = { version = "0.3.37", features = ["console", "Performance", "Window"] }

[dev-dependencies]
indoc = "0.3.5"
unindent = "0.1.5"

[build-dependencies]
lalrpop = "0.18.1"
